<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/main_headerImg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/main_headerImg_description"
        android:scaleType="centerCrop"
        android:src="@drawable/header" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_2x"
        android:orientation="vertical">

        <!-- Title and bookmark -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/main_lbl_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_lbl_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/main_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/main_bookmark_description"
                android:src="@drawable/ic_bookmark" />

        </LinearLayout>

        <TextView
            android:id="@+id/main_lbl_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin"
            android:text="@string/main_lbl_date" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin"
            android:orientation="horizontal">


            <Button
                android:id="@+id/main_btn_rent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_2x"
                android:layout_weight="1"
                android:text="@string/main_btn_rent" />

            <Button
                android:id="@+id/main_btn_buy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_btn_buy" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_horizontalLine_size"
            android:background="@color/gray_divider" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="@dimen/margin_2x">



            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_baseline_edit_24"

                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/main_lbl_ratings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/lbl_ratings" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_family"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/main_lbl_family"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/lbl_family" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"

                    android:src="@drawable/tomato"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/main_lbl_tomato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/lbl_tomato" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_similar"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/main_lbl_similar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/lbl_similar" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_horizontalLine_size"
            android:background="@color/gray_divider" />


        <TextView
            android:layout_marginVertical="@dimen/margin_2x"
            android:id="@+id/lbl_description"
            android:textSize="@dimen/main_description_textSize"
            android:text="@string/main_lbl_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>



    </LinearLayout>


</LinearLayout>
